# glasses-radar

./: README.md  pyproject.toml
data/: fingerprints.json
glasses_radar/: __init__.py  alerter.py  matcher.py  models.py  scanner.py
tests/: test_alerter.py  test_matcher.py  test_models.py  test_scanner.py
